Fixed issue: Symmetric method comparison also works for non-grid graphs now.

--- a/Notebooks/9_real_world_example.ipynb
+++ b/Notebooks/9_real_world_example.ipynb
@@ -245,7 +245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_objs, po_objs, spo_objs, adv_spo_objs = compare_shortest_paths(cfg, opt_model, po_model, spo_model_non_adverse, testing_data, spo_model)"
+    "true_objs, po_objs, spo_objs, adv_spo_objs = compare_shortest_paths(\n",
+    "    cfg, opt_model, po_model, spo_model_non_adverse, testing_data, spo_model)"
    ]
   },
   {
@@ -257,9 +258,6 @@
    "source": [
     "po_val = [(po - true) / true * 100 for po, true in zip(po_objs, true_objs)]\n",
     "spo_val = [(spo - true) / true * 100 for spo, true in zip(spo_objs, true_objs)]\n",
-    "\n",
-    "# plt.scatter(np.ones_like(po_objs), po_val)\n",
-    "# plt.scatter(np.ones_like(spo_objs) + 1, spo_val)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6,4))\n",
     "\n",
@@ -347,122 +345,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def compare_sym_intd(cfg, po_model, spo_model, test_data, interdictions, normalization_constant, idx = None, adv_spo_model = None):\n",
-    "#     \"\"\"\n",
-    "#     Compare the performance of the PO and SPO models using symmetric shortest path interdiction.\n",
-    "#     This function simulates the interdiction process and evaluates the objective values.\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     # Get the number of simulation data samples\n",
-    "#     num_test_samples = cfg.get(\"num_test_samples\")\n",
-    "\n",
-    "#     # Prepare lists to store results\n",
-    "#     true_objs = []\n",
-    "#     po_objs = []\n",
-    "#     spo_objs = []\n",
-    "#     adv_spo_objs = []\n",
-    "\n",
-    "#     # Print that the simulation is starting\n",
-    "#     print(f\"Running simulation with {num_test_samples} samples...\")\n",
-    "\n",
-    "#     # Iterate through each data sample\n",
-    "#     for i in range(num_test_samples) if idx is None else [idx]:\n",
-    "#         # Store values for the current sample\n",
-    "#         feature = test_data[\"feats\"][i]\n",
-    "#         cost = test_data[\"costs\"][i] * normalization_constant\n",
-    "#         interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
-    "#         m, n = cfg.get(\"grid_size\")\n",
-    "        \n",
-    "#         # Update opt_model\n",
-    "#         true_graph = ShortestPathGrid(m, n, cost=cost)\n",
-    "#         opt_model = shortestPathGrb(true_graph)\n",
-    "\n",
-    "#         # Update the estimated costs\n",
-    "#         po_cost = po_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
-    "#         spo_cost = spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
-    "#         if adv_spo_model is not None:\n",
-    "#             adv_spo_cost = adv_spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
-    "\n",
-    "#         # Solutions without information asymmetry\n",
-    "#         interdictor_I = BendersDecomposition(opt_model, \n",
-    "#                                              k=cfg.get(\"budget\"), \n",
-    "#                                              interdiction_cost=interdiction, \n",
-    "#                                              max_cnt=cfg.get(\"benders_max_count\"), \n",
-    "#                                              eps=cfg.get(\"benders_eps\"))\n",
-    "#         x_intd, _, _ = interdictor_I.solve(versatile=False if idx is None else True)\n",
-    "\n",
-    "#         # True shortest path after interdiction\n",
-    "#         opt_model.setObj(cost + x_intd * interdiction)\n",
-    "#         y_true, _ = opt_model.solve()\n",
-    "\n",
-    "#         # PO estimated shortest path after interdiction\n",
-    "#         opt_model.setObj(po_cost + x_intd * interdiction)\n",
-    "#         y_po, _ = opt_model.solve()\n",
-    "\n",
-    "#         # SPO estimated shortest path after interdiction\n",
-    "#         opt_model.setObj(spo_cost + x_intd * interdiction)\n",
-    "#         y_spo, _ = opt_model.solve()\n",
-    "\n",
-    "#         # Adverse SPO shortest path after interdiction\n",
-    "#         if adv_spo_model is not None:\n",
-    "#             opt_model.setObj(adv_spo_cost + x_intd * interdiction)\n",
-    "#             y_adv_spo, _ = opt_model.solve()\n",
-    "\n",
-    "#         # Store the results\n",
-    "#         true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
-    "#         po_objs.append(true_graph(y_po, interdictions=x_intd * interdiction))\n",
-    "#         spo_objs.append(true_graph(y_spo, interdictions=x_intd * interdiction))\n",
-    "#         if adv_spo_model is not None:\n",
-    "#             adv_spo_objs.append(true_graph(y_adv_spo, interdictions=x_intd * interdiction))\n",
-    "\n",
-    "#         step = max(1, num_test_samples // 20)  # ~every 5% (safe for small N)\n",
-    "#         if (i % step == 0) or (i == num_test_samples - 1):\n",
-    "#             if i == num_test_samples - 1:\n",
-    "#                 done, pct = 20, 100                      # final tick\n",
-    "#             else:\n",
-    "#                 done = (i * 20) // num_test_samples      # 0..20 “=”\n",
-    "#                 pct  = done * 5                          # 0,5,10,...,95\n",
-    "\n",
-    "#             sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
-    "#             sys.stdout.flush()\n",
-    "#             if i == num_test_samples - 1:\n",
-    "#                 sys.stdout.write('\\n')\n",
-    "\n",
-    "\n",
-    "#     # Evaluate performance\n",
-    "#     return {\n",
-    "#         \"true_objective\": np.array(true_objs),\n",
-    "#         \"po_objective\": np.array(po_objs),\n",
-    "#         \"spo_objective\": np.array(spo_objs),\n",
-    "#     } if adv_spo_model is None else {\n",
-    "#         \"true_objective\": np.array(true_objs),\n",
-    "#         \"po_objective\": np.array(po_objs),\n",
-    "#         \"spo_objective\": np.array(spo_objs),\n",
-    "#         \"adv_spo_objective\": np.array(adv_spo_objs)\n",
-    "#     }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "all_pred_sym_intd = compare_sym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    po_model, \n",
     "    spo_model_non_adverse, \n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
-    "    adv_spo_model=spo_model\n",
+    "    adfl_predictor=spo_model\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "source": [
     "## Asymmetric interdictions with correct evader model"
@@ -471,100 +368,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def compare_asym_intd(cfg, test_data, interdictions, normalization_constant, pred_model = None):\n",
-    "#     \"\"\"\n",
-    "#     Compare the performance of the predicted model with the true model\n",
-    "#     using asymmetric shortest path interdiction.\n",
-    "#     \"\"\" \n",
-    "\n",
-    "#     # Get the number of simulation data samples\n",
-    "#     num_test_samples = cfg.get(\"num_test_samples\")\n",
-    "\n",
-    "#     # Print that the simulation is starting\n",
-    "#     print(f\"Running simulation with {num_test_samples} samples...\")\n",
-    "\n",
-    "#     # Prepare lists to store results\n",
-    "#     true_objs = []\n",
-    "#     est_objs = []\n",
-    "\n",
-    "#     # Iterate through each data sample\n",
-    "#     for i in range(num_test_samples):\n",
-    "#         # Store values for the current sample\n",
-    "#         cost = test_data[\"costs\"][i] * normalization_constant\n",
-    "#         interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
-    "#         m, n = cfg.get(\"grid_size\")\n",
-    "\n",
-    "#         # Compute estimated cost if an estimator is provided. Otherwise use the true costs\n",
-    "#         if pred_model is not None:\n",
-    "#             feature = test_data[\"feats\"][i]\n",
-    "#             pred_cost = pred_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
-    "#         else:\n",
-    "#             pred_cost = cost\n",
-    "        \n",
-    "#         # Create graph with true costs and opt_model for estimated shortest path\n",
-    "#         true_graph = ShortestPathGrid(m, n, cost=cost)\n",
-    "#         est_opt_model = shortestPathGrb(true_graph)\n",
-    "#         est_opt_model.setObj(pred_cost)\n",
-    "\n",
-    "#         # Solutions with information asymmetry\n",
-    "#         asym_interdictor = AsymmetricSPNI(\n",
-    "#             true_graph, \n",
-    "#             budget=cfg.get(\"budget\"), \n",
-    "#             true_costs=cost, \n",
-    "#             true_delays=interdiction, \n",
-    "#             est_costs=pred_cost, \n",
-    "#             est_delays=interdiction, \n",
-    "#             lsd=cfg.get(\"lsd\")\n",
-    "#         )\n",
-    "#         x_intd, _ = asym_interdictor.solve()\n",
-    "\n",
-    "#         # # True shortest path after interdiction\n",
-    "#         # opt_model.setObj(cost + x_intd * interdiction)\n",
-    "#         # y_true, _ = opt_model.solve()\n",
-    "\n",
-    "#         # Estimated shortest path after interdiction\n",
-    "#         est_opt_model.setObj(pred_cost + x_intd * interdiction)\n",
-    "#         y_est, _ = est_opt_model.solve()\n",
-    "\n",
-    "#         # Store the results\n",
-    "#         # true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
-    "#         est_objs.append(true_graph(y_est, interdictions=x_intd * interdiction))\n",
-    "\n",
-    "#         # Print progress\n",
-    "#         step = max(1, num_test_samples // 20)  # ~every 5% (safe for small N)\n",
-    "#         if (i % step == 0) or (i == num_test_samples - 1):\n",
-    "#             if i == num_test_samples - 1:\n",
-    "#                 done, pct = 20, 100                      # final tick\n",
-    "#             else:\n",
-    "#                 done = (i * 20) // num_test_samples      # 0..20 “=”\n",
-    "#                 pct  = done * 5                          # 0,5,10,...,95\n",
-    "\n",
-    "#             sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
-    "#             sys.stdout.flush()\n",
-    "#             if i == num_test_samples - 1:\n",
-    "#                 sys.stdout.write('\\n')\n",
-    "\n",
-    "#     # Evaluate performance\n",
-    "#     # return {\n",
-    "#     #     \"true_objective\": np.array(true_objs),\n",
-    "#     #     \"estimated_objective\": np.array(est_objs),\n",
-    "#     # }\n",
-    "#     return np.array(est_objs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
     "no_pred_asym_intd = compare_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model=opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant\n",
@@ -574,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "30",
    "metadata": {},
    "source": [
     "## Asymmetric interdictions with wrong evader models"
@@ -630,91 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def compare_wrong_asym_intd(cfg, test_data, interdictions, normalization_constant, true_model, false_model):\n",
-    "#     \"\"\"\n",
-    "#     Evader uses true model and interdictor uses asymmetric SPNI assuming false model.\n",
-    "#     \"\"\" \n",
-    "\n",
-    "#     # Get the number of simulation data samples\n",
-    "#     num_test_samples = cfg.get(\"num_test_samples\")\n",
-    "\n",
-    "#     # Print that the simulation is starting\n",
-    "#     print(f\"Running simulation with {num_test_samples} samples...\")\n",
-    "\n",
-    "#     # Prepare lists to store results\n",
-    "#     true_objs = []\n",
-    "#     est_objs = []\n",
-    "\n",
-    "#     # Iterate through each data sample\n",
-    "#     for i in range(num_test_samples):\n",
-    "#         # Store values for the current sample\n",
-    "#         cost = test_data[\"costs\"][i] * normalization_constant\n",
-    "#         interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
-    "#         m, n = cfg.get(\"grid_size\")\n",
-    "\n",
-    "#         # Compute estimated cost if an estimator is provided. Otherwise use the true costs\n",
-    "#         feature = test_data[\"feats\"][i]\n",
-    "#         true_pred_cost = true_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
-    "#         false_pred_cost = false_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
-    "\n",
-    "#         # Create graph with true costs and opt_model for estimated shortest path\n",
-    "#         true_graph = ShortestPathGrid(m, n, cost=cost)\n",
-    "#         est_opt_model = shortestPathGrb(true_graph)\n",
-    "\n",
-    "#         # Solutions with information asymmetry\n",
-    "#         asym_interdictor = AsymmetricSPNI(\n",
-    "#             true_graph, \n",
-    "#             budget=cfg.get(\"budget\"), \n",
-    "#             true_costs=cost, \n",
-    "#             true_delays=interdiction, \n",
-    "#             est_costs=false_pred_cost, \n",
-    "#             est_delays=interdiction, \n",
-    "#             lsd=cfg.get(\"lsd\")\n",
-    "#         )\n",
-    "#         x_intd, _ = asym_interdictor.solve()\n",
-    "\n",
-    "#         # # True shortest path after interdiction\n",
-    "#         # opt_model.setObj(cost + x_intd * interdiction)\n",
-    "#         # y_true, _ = opt_model.solve()\n",
-    "\n",
-    "#         # Estimated shortest path after interdiction\n",
-    "#         est_opt_model.setObj(true_pred_cost + x_intd * interdiction)\n",
-    "#         y_est, _ = est_opt_model.solve()\n",
-    "\n",
-    "#         # Store the results\n",
-    "#         # true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
-    "#         est_objs.append(true_graph(y_est, interdictions=x_intd * interdiction))\n",
-    "\n",
-    "#         # Print progress\n",
-    "#         step = max(1, num_test_samples // 20)  # ~every 5% (safe for small N)\n",
-    "#         if (i % step == 0) or (i == num_test_samples - 1):\n",
-    "#             if i == num_test_samples - 1:\n",
-    "#                 done, pct = 20, 100                      # final tick\n",
-    "#             else:\n",
-    "#                 done = (i * 20) // num_test_samples      # 0..20 “=”\n",
-    "#                 pct  = done * 5                          # 0,5,10,...,95\n",
-    "\n",
-    "#             sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
-    "#             sys.stdout.flush()\n",
-    "#             if i == num_test_samples - 1:\n",
-    "#                 sys.stdout.write('\\n')\n",
-    "\n",
-    "#     # Evaluate performance\n",
-    "#     # return {\n",
-    "#     #     \"true_objective\": np.array(true_objs),\n",
-    "#     #     \"estimated_objective\": np.array(est_objs),\n",
-    "#     # }\n",
-    "#     return np.array(est_objs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "37",
    "metadata": {},
    "source": [
     "## Sanity checks and results"
@@ -824,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": []
