Fixed issue: No error when running asymmetric interdictor with start and target nodes different than the default anymore.

--- a/Notebooks/9_real_world_example.ipynb
+++ b/Notebooks/9_real_world_example.ipynb
@@ -74,9 +74,9 @@
     "cfg.set(\"intd_seed\", seed2)\n",
     "cfg.set(\"data_loader_seed\", seed3)\n",
     "\n",
-    "cfg.set(\"num_train_samples\", 150)\n",
-    "cfg.set(\"num_val_samples\", 50)\n",
-    "cfg.set(\"num_test_samples\", 100)\n"
+    "# cfg.set(\"num_train_samples\", 150)\n",
+    "# cfg.set(\"num_val_samples\", 50)\n",
+    "# cfg.set(\"num_test_samples\", 100)\n"
    ]
   },
   {
@@ -116,10 +116,15 @@
     "    os.path.dirname(os.getcwd()), \n",
     "    'real_world_spni_data/county_level_arcs.csv'\n",
     ")\n",
-    "graph = csv_to_graph(file_path)\n",
-    "cfg.set(\"grid_size\", (graph.num_cost+1, 1))\n",
+    "# graph = csv_to_graph(file_path)\n",
+    "# cfg.set(\"grid_size\", (graph.num_cost+1, 1))\n",
+    "if True:\n",
+    "    graph = csv_to_graph(file_path)\n",
+    "    cfg.set(\"grid_size\", (graph.num_cost+1, 1))\n",
+    "else:\n",
+    "    m, n = cfg.get(\"grid_size\")\n",
+    "    graph = Grid(m, n)\n",
     "opt_model = ShortestPathGrb(graph)\n",
-    "graph.visualize()\n",
     "\n",
     "# Generate normalized training and testing data\n",
     "training_data, testing_data, normalization_constant = gen_train_data(cfg, opt_model)"
@@ -374,10 +379,10 @@
    "source": [
     "no_pred_asym_intd = compare_asym_intd(\n",
     "    cfg, \n",
-    "    opt_model=opt_model,\n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
-    "    normalization_constant\n",
+    "    normalization_constant,\n",
     ")"
    ]
   },
@@ -390,6 +395,7 @@
    "source": [
     "po_pred_asym_intd_I = compare_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -406,6 +412,7 @@
    "source": [
     "spo_pred_asym_intd_I = compare_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -422,6 +429,7 @@
    "source": [
     "adv_spo_pred_asym_intd_I = compare_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -446,6 +454,7 @@
    "source": [
     "true_nonadv_false_po_asym_intd = compare_wrong_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -463,6 +472,7 @@
    "source": [
     "true_po_false_nonadv_asym_intd = compare_wrong_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -480,6 +490,7 @@
    "source": [
     "true_spo_false_po_asym_intd = compare_wrong_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -497,6 +508,7 @@
    "source": [
     "true_po_false_spo_asym_intd = compare_wrong_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -514,6 +526,7 @@
    "source": [
     "true_adv_false_nonadv_asym_intd = compare_wrong_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
@@ -531,6 +544,7 @@
    "source": [
     "true_nonadv_false_adv_asym_intd = compare_wrong_asym_intd(\n",
     "    cfg, \n",
+    "    opt_model,\n",
     "    testing_data, \n",
     "    interdictions, \n",
     "    normalization_constant, \n",
