Remaining issue: asymmetric interdictor doesn't work: significantly different results compared to symmetric interdictor.

--- a/Notebooks/9_real_world_example.ipynb
+++ b/Notebooks/9_real_world_example.ipynb
@@ -118,7 +118,7 @@
     ")\n",
     "# graph = csv_to_graph(file_path)\n",
     "# cfg.set(\"grid_size\", (graph.num_cost+1, 1))\n",
-    "if True:\n",
+    "if False:\n",
     "    graph = csv_to_graph(file_path)\n",
     "    cfg.set(\"grid_size\", (graph.num_cost+1, 1))\n",
     "else:\n",
